--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quotes",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kguzik.github.io/movie-quotes-quiz/",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -10,8 +11,8 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
+    "gh-pages": "^3.1.0",
     "materialize-css": "^1.0.0-rc.2",
-    "movie-quotes": "^1.0.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
