--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
+    "firebase": "^7.19.1",
+    "firebase-tools": "^8.10.0",
     "gh-pages": "^3.1.0",
     "materialize-css": "^1.0.0-rc.2",
     "node-sass": "^4.14.1",
