--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-spinners": "^0.9.0",
     "sweetalert2": "^9.17.1"
   },
   "scripts": {
